--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
+    "axios": "^0.20.0",
+    "raf": "3.3.2",
+    "react": "^16.0.0-0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.0.0-0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
     "gh-pages": "^3.1.0"
   }
 }
