--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -3,19 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "axios": "^0.20.0"
-  },
-  "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.0"
+  }
 }
