--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "raf": "3.3.2",
-    "react": "^16.0.0-0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.0.0-0"
+    "react": "^16.13.1",
+    "react-dom": "^16.9.0",
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,15 +37,13 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.13",
     "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-adapter-react-16": "1.15.1",
     "gh-pages": "^3.1.0",
     "identity-obj-proxy": "^3.0.0"
   },
   "jest": {
-    "setupFilesAfterEnv": [
-      "./src/setupTests.js"
-    ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
