--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "https://teresasanders77.github.io/meetup",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.5",
     "axios": "^0.20.0",
-    "raf": "3.3.2",
+    "raf": "3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.3"
@@ -37,11 +37,12 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.15.1",
+    "@types/jest": "^26.0.14",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.4",
     "gh-pages": "^3.1.0",
-    "identity-obj-proxy": "^3.0.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest-cucumber": "^3.0.0"
   },
   "jest": {
     "moduleNameMapper": {
