--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.5",
     "axios": "^0.20.0",
+    "puppeteer": "^5.3.0",
     "raf": "3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.9.0",
