--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.5",
+    "atatus-spa": "^4.2.1",
     "axios": "^0.20.0",
     "puppeteer": "^5.3.0",
     "raf": "3.4.1",
