Added first alert

--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -3,27 +3,33 @@
   "provider": {
     "name": "aws",
     "runtime": "nodejs12.x",
-    "region": "us-east-1"
+    "region": "us-east-1",
+    "timeout": "60"
 },
 "functions": {
-  "getAccessToken": {
-    "handler": "handler.getAccessToken",
+  "getToken": {
+    "handler": "handler.getToken",
+    "environment": {
+      "SLS_DEBUG": "true"
+    },
     "events": [
       {
        "http": {
           "path": "api/token/{code}",
-          "method": "get"
+          "method": "get",
+          "cors": "true"
        }
       }
     ]
   },
-  "refreshAccessToken": {
-    "handler": "handler.refreshAccessToken",
+  "refreshToken": {
+    "handler": "handler.refreshToken",
     "events": [
       {
         "http": {
           "path": "api/refresh/{code}",
-          "method": "get"
+          "method": "get",
+          "cors": "true"
         }
       }
     ]
