--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.1.5",
     "atatus-spa": "^4.2.1",
     "axios": "^0.20.0",
+    "moment": "^2.29.0",
     "puppeteer": "^5.3.0",
     "raf": "3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.9.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
