--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@testing-library/user-event": "^12.1.5",
     "atatus-spa": "^4.2.1",
     "axios": "^0.20.0",
+    "g": "^2.0.1",
     "moment": "^2.29.0",
-    "puppeteer": "^5.3.0",
     "raf": "3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.3",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +47,8 @@
     "enzyme-adapter-react-16": "1.15.4",
     "gh-pages": "^3.1.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest-cucumber": "^3.0.0"
+    "jest-cucumber": "^3.0.0",
+    "puppeteer": "^5.3.0"
   },
   "jest": {
     "moduleNameMapper": {
